tests/bash-tests/bash_test_output.ref
BADINVOCATION DO badinvocation^%YDBAIMTEST
# Testing ^%YDBAIM with tp=0
$ZSTATUS="150379506,%YDBAIM+3^%YDBAIM,%YDBAIM-F-BADINVOCATION Top level invocation of %YDBAIM not supported; must invoke a label"
# Testing ^%YDBAIM with tp=1
$ZSTATUS="150379506,%YDBAIM+3^%YDBAIM,%YDBAIM-F-BADINVOCATION Top level invocation of %YDBAIM not supported; must invoke a label"
# Testing LSXREFDATA^%YDBAIM with tp=0
# Testing LSXREFDATA^%YDBAIM with tp=1
# Testing UNXREFDATA^%YDBAIM with tp=0
# Testing UNXREFDATA^%YDBAIM with tp=1
# Testing XREFDATA^%YDBAIM with tp=0
$ZSTATUS="150379506,XREFDATA+13^%YDBAIM,%YDBAIM-F-NOTAGBL Variable """" is not a valid global variable name"
# Testing XREFDATA^%YDBAIM with tp=1
$ZSTATUS="150379506,XREFDATA+13^%YDBAIM,%YDBAIM-F-NOTAGBL Variable """" is not a valid global variable name"
0
---------------

NOSUBS write $$XREFDATA^%YDBAIM("^abcd")
Error occurred: 150379506,XREFDATA+43^%YDBAIM,%YDBAIM-F-NOSUBS Need at least 1 subscript to cross reference default type, 2 for type=1; nsubs=0
242
---------------

NOTAGBL1 write $$XREFDATA^%YDBAIM
Error occurred: 150379506,XREFDATA+13^%YDBAIM,%YDBAIM-F-NOTAGBL Variable "" is not a valid global variable name
242
---------------

NOPIECE write $$XREFDATA^%YDBAIM("^abcd",1,"|")
Error occurred: 150379506,XREFDATA+117^%YDBAIM,%YDBAIM-F-NOPIECE Piece separator "|" specified, but no piece numbers
242
---------------

CANTADDSTAT write $$XREFDATA^%YDBAIM("^abcd",1,"|",1),!,$$XREFDATA^%YDBAIM("^abcd",1,"|",1,,,,2)
^%ydbAIMDGB3Ey8B4z3CDDZOF7U4Y52
Error occurred: 150379506,XREFDATA+123^%YDBAIM,%YDBAIM-F-CANTADDSTAT stat=2 and ^%ydbAIMDGB3Ey8B4z3CDDZOF7U4Y52(10)=0 - adding statistics to existing metadata not supported
242
---------------

NOEXTREF write $$XREFDATA^%YDBAIM("^|""x.gld""|x")
Error occurred: 150379506,XREFDATA+15^%YDBAIM,%YDBAIM-F-NOEXTREF Extended reference in ^|"x.gld"|x is not supported
242
---------------

INVPIECE set subs(1)="1:2:3" write $$XREFDATA^%YDBAIM("^x",.subs)
Error occurred: 150379506,XREFDATAQUIT+41^%YDBAIM,%YDBAIM-F-INVPIECE Range "1:2:3" has invalid number of pieces: 3
242
---------------

INVPNUMSEP kill ^x set ^x(1)="a1|b1",^x(2)="a2|",^x(3)="|b3",subs(1)="*" write $$XREFDATA^%YDBAIM("^x",.subs,"|","1:2:3")
Error occurred: 150379506,XREFDATAQUIT+151^%YDBAIM,%YDBAIM-F-INVPNUMSEP Range specification 1 ("1:2:3") has 3 ":" separated pieces, invalid
242
---------------

NOTAGBL2 write $$UNXREFDATA^%YDBAIM("xy123456789012345678901234567890",1)
Error occurred: 150379506,UNXREFDATA+20^%YDBAIM,%YDBAIM-F-NOTAGBL Variable "xy123456789012345678901234567890" is not a valid global variable name
242
---------------

NOTAGBL3 write $$XREFDATA^%YDBAIM("^xy123456789012345678901234567890",0)
Error occurred: 150379506,XREFDATA+17^%YDBAIM,%YDBAIM-F-NOTAGBL Variable "^xy123456789012345678901234567890" is not a valid global variable name
242
---------------

NOTAGBL4 write $$XREFDATA^%YDBAIM("^xy123456789012345678901234567890",1)
Error occurred: 150379506,XREFDATA+17^%YDBAIM,%YDBAIM-F-NOTAGBL Variable "^xy123456789012345678901234567890" is not a valid global variable name
242
---------------

NOTAGBL5 write $$UNXREFDATA^%YDBAIM("^xy123456789012345678901234567890",0)
Error occurred: 150379506,UNXREFDATA+20^%YDBAIM,%YDBAIM-F-NOTAGBL Variable "^xy123456789012345678901234567890" is not a valid global variable name
242
---------------

NOTAGBL6 write $$UNXREFDATA^%YDBAIM("^xy123456789012345678901234567890",1)
Error occurred: 150379506,UNXREFDATA+20^%YDBAIM,%YDBAIM-F-NOTAGBL Variable "^xy123456789012345678901234567890" is not a valid global variable name
242
---------------

GVSUBOFLOW0 do gvsuboflow^%YDBAIMTEST(0)
Error occurred: 150372986,xrefdata+137^%YDBAIM,%YDB-E-GVSUBOFLOW, Maximum combined length of subscripts exceeded,%YDB-I-GVIS, 		Global variable: ^%ydbAIMDgFr8HZY2gJsda6acj41uCE(0*
aimglobal="^%ydbAIMDgFr8HZY2gJsda6acj41uCE"
0
---------------

GVSUBOFLOW1 do gvsuboflow^%YDBAIMTEST(1)
Error occurred: 150372986,xrefdata+137^%YDBAIM,%YDB-E-GVSUBOFLOW, Maximum combined length of subscripts exceeded,%YDB-I-GVIS, 		Global variable: ^%ydbAIMDgFr8HZY2gJsda6acj41uCE(0*
aimglobal="^%ydbAIMDgFr8HZY2gJsda6acj41uCE"
0
---------------

BADINVOCATION2 DO ^%YDBAIM
Error occurred: 150379506,%YDBAIM+3^%YDBAIM,%YDBAIM-F-BADINVOCATION Top level invocation of %YDBAIM not supported; must invoke a label
242
---------------

BADINVOCATION3 DO ^%YDBAIM in direct mode (not via %XCMD)

YDB>
%YDBAIM-F-BADINVOCATION Top level invocation of %YDBAIM not supported; must invoke a label
		At M source location %YDBAIM+3^%YDBAIM

YDB>
0
---------------

